[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interfacce Utente/Inventario/blackTexture.tres" type="Texture" id=1]
[ext_resource path="res://Interfacce Utente/Inventario/shopContainer.gd" type="Script" id=2]
[ext_resource path="res://Interfacce Utente/Inventario/Font/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="ItemContainer" type="HBoxContainer"]
margin_right = 649.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemBackground" type="TextureRect" parent="."]
margin_left = 126.0
margin_right = 196.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 1 )
expand = true

[node name="ItemButton" type="TextureButton" parent="ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.7401
margin_top = -33.7401
margin_right = 1.25989
margin_bottom = 1.25995
rect_min_size = Vector2( 65, 35 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="."]
margin_left = 326.0
margin_right = 649.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
valign = 1
[connection signal="gui_input" from="." to="." method="_on_ItemContainer_gui_input"]
